testsuite/tests/parsing/pr7165.ml.reference
File "pr7165.ml", line 4, characters 0-25:
Error: Invalid lexer directive "#9342101923012312312 \"\"": line number out of range
